fixed visibility on visited link color inside the button

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,6 +86,10 @@ p {
   color: #ffffff;
 }
 
+.button.button--secondary a:visited {
+  color: #bfb1f7;
+}
+
 /**Nav bar **/
 .navbar .navbar__inner {
   margin: 0 auto;
